docs/2.7.18/dependency-analyze-dep-mgt.md
# dependency:analyze-dep-mgt    

```
[[1;34mINFO[m] Scanning for projects...
[[1;34mINFO[m] 
[[1;34mINFO[m] [1m--------------< [0;36mcom.boilerplate:spring-boot-boilerplate[0;1m >---------------[m
[[1;34mINFO[m] [1mBuilding spring-boot-boilerplate 0.0.1-SNAPSHOT[m
[[1;34mINFO[m] [1m--------------------------------[ jar ]---------------------------------[m
[[1;34mINFO[m] 
[[1;34mINFO[m] [1m--- [0;32mmaven-dependency-plugin:3.3.0:analyze-dep-mgt[m [1m(default-cli)[m @ [36mspring-boot-boilerplate[0;1m ---[m
[[1;34mINFO[m] Found Resolved Dependency/DependencyManagement mismatches:
[[1;34mINFO[m] 	Ignoring Direct Dependencies.
[[1;34mINFO[m] 	None
[[1;34mINFO[m] [1m------------------------------------------------------------------------[m
[[1;34mINFO[m] [1;32mBUILD SUCCESS[m
[[1;34mINFO[m] [1m------------------------------------------------------------------------[m
[[1;34mINFO[m] Total time:  1.427 s
[[1;34mINFO[m] Finished at: 2025-04-06T22:40:27+08:00
[[1;34mINFO[m] [1m------------------------------------------------------------------------[m
```